--- a/CLICK_SITE/src/css/login.css
+++ b/CLICK_SITE/src/css/login.css
@@ -1,4 +1,3 @@
-
 * {
   margin: 0;
   padding: 0;
@@ -7,9 +6,9 @@
 }
 
 :root {
-    --azul: rgb(25, 25, 109);
-    --verde: rgb(58, 184, 146);
-  }
+  --azul: rgb(25, 25, 109);
+  --verde: rgb(58, 184, 146);
+}
 
 body {
   width: 100vw;
@@ -37,7 +36,7 @@ body {
 form {
   position: absolute;
   margin-top: 60px;
-  transition: .5s;
+  transition: 0.5s;
   width: 300px;
   height: 400px;
 }
@@ -63,12 +62,12 @@ form {
   height: 100%;
   background-color: var(--azul);
   border-radius: 30px;
-  transition: .4s;
+  transition: 0.4s;
 }
 
-.input-field{
-    margin: 0;
-    padding: 0;
+.input-field {
+  margin: 0;
+  padding: 0;
 }
 
 button[type="submit"] {
@@ -85,18 +84,18 @@ button[type="submit"] {
   font-weight: 500;
 }
 
-button[type="submit"]:hover{
-    background-color: rgb(0, 0, 107);
-    transition: .6s;
+button[type="submit"]:hover {
+  background-color: rgb(0, 0, 107);
+  transition: 0.6s;
 }
 
 #signin {
-    top: 30%;
+  top: 30%;
   left: 25px;
 }
 
 #signup {
-    top: 25%;
+  top: 25%;
   left: 450px;
   bottom: 0%;
 }
@@ -107,42 +106,42 @@ i {
   padding: 10px 10px;
 }
 
-#btnSignin{
-    color: white;
+#btnSignin {
+  color: white;
 }
 
-#btnSignup{
-    color: rgb(255, 255, 255);
+#btnSignup {
+  color: rgb(255, 255, 255);
 }
 
-.imagem{
-    width: 70%;
+.imagem {
+  width: 70%;
 }
 
-.responsive-img{
-    margin-top: 30px;
+.responsive-img {
+  margin-top: 30px;
 }
 
-.title{
-    font-weight: 600;
-    color: var(--azul);
-    font-size: 15px;
+.title {
+  font-weight: 600;
+  color: var(--azul);
+  font-size: 15px;
 }
 
-.material-icons{
-    color: var(--azul);
+.material-icons {
+  color: var(--azul);
 }
 
-.esqueci{
-    margin-top: 20px;
-    text-align: center;
+.esqueci {
+  margin-top: 20px;
+  text-align: center;
 }
-.forgot{
-    color: black;
-    font-size: 15px;
+.forgot {
+  color: black;
+  font-size: 15px;
 }
 
-.forgot:hover{
-    color: red;
-    transition: .5s;
+.forgot:hover {
+  color: red;
+  transition: 0.5s;
 }
