--- a/CLICK_SITE/src/css/principal.css
+++ b/CLICK_SITE/src/css/principal.css
@@ -1,69 +1,67 @@
-html, * {
-    margin: 0;
-    padding: 0;
-  }
-  
-  :root {
-    --azul: rgb(25, 25, 109);
-    --verde: rgb(58, 184, 146);
-  }
-  
-  .icon-block {
-    padding: 0 15px;
-  }
-  .icon-block .material-icons {
-      font-size: inherit;
-  }
-
-  .body{
-    background-color: white;
-  }
-
-  .nav-wrapper{
-    width: 100%;
-    background-color: var(--azul);
-    height: 90px;
-    overflow: hidden;
-  }
-
-.collapsible{
-  width: 100%;
-  
+html,
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.collapsible-header{
+:root {
+  --azul: rgb(25, 25, 109);
+  --verde: rgb(58, 184, 146);
+}
+
+.icon-block {
+  padding: 0 15px;
+}
+.icon-block .material-icons {
+  font-size: inherit;
+}
+
+.body {
+  background-color: white;
+}
+
+.nav-wrapper {
+  width: 100%;
+  background-color: var(--azul);
+  height: 90px;
+  overflow: hidden;
+}
+
+.collapsible {
+  width: 100%;
+}
+
+.collapsible-header {
   height: 70px;
   color: white;
   font-weight: bold;
   font-size: 25px;
   background-color: var(--azul);
-
 }
 
-.collapsible-body{
+.collapsible-body {
   background-color: rgb(209, 209, 209);
 }
 
-.material-icons{
+.material-icons {
   color: var(--verde);
 }
 
-.material-icons:hover{
+.material-icons:hover {
   color: white;
-  transition: .4s;
+  transition: 0.4s;
 }
 
-.contador{
+.contador {
   padding-left: 100px;
-  
 }
 
-.textContador{
+.textContador {
   font-weight: 300;
   font-size: 20px;
 }
 
-.img{
+.img {
   text-align: center;
   padding: 0%;
   width: 120px;
@@ -72,18 +70,18 @@ html, * {
   padding-bottom: 10px;
 }
 
-.escolha{
+.escolha {
   padding-top: 25px;
   padding-bottom: 10px;
 }
 
-.escolha-text{
+.escolha-text {
   color: var(--azul);
   font-size: larger;
   font-weight: bold;
 }
 
-.categoria:hover{
+.categoria:hover {
   color: var(--verde);
-  transition: .4s;
+  transition: 0.4s;
 }
